# s

./: Cargo.toml  README.md  num-cpu = "0.1.0"  }
src/: cpu.rs  lib.rs  time.rs
tests/: lib.rs
