[package]
name = "s"
version = "0.1.2"
edition = "2021"
description = "AI Optimized Rust Utilities Crate"
license = "MIT"
repository = "https://github.com/rustcrate/s"
keywords = ["cpu", "cores", "parallelism", "system"]
categories = ["os"]

[dependencies]

[dev-dependencies]
[[test]]
name = "lib"
path = "tests/lib.rs"
